@@ -1,14 +1,15 @@
 Package: covafillr
 Title: Local Polynomial Regression of State Dependent Covariates in State-Space Models
-Version: 0.3.0
+Version: 0.3.0-999
 Date: 2016-05-12
 Authors@R: person(c("Christoffer","Moesgaard"), "Albertsen",
 	   email = "cmoe@aqua.dtu.dk", role = c("aut", "cre"))
 Maintainer: Christoffer Moesgaard Albertsen <cmoe@aqua.dtu.dk>	   
 Description: Facilitates local polynomial regression for state dependent covariates in state-space models. The functionality can also be used from 'C++' based model builder tools such as 'Rcpp'/'inline', 'TMB', or 'JAGS'.
 BugReports: https://github.com/calbertsen/covafillr/issues
-Depends: R (>= 3.0.0),
-Imports: methods
+Depends: R (>= 3.0.0)
+Imports: methods,
+	 ggplot2
 LinkingTo: RcppEigen,
 Suggests: TMB,
 	  rjags,
