@@ -4,7 +4,10 @@ export(covafill)
 export(covatree)
 export(cxxFlags)
 export(loadJAGSModule)
+export(stat_covafill)
 exportClasses(covafill)
 exportClasses(covatree)
+importFrom(ggplot2,Stat)
+importFrom(ggplot2,ggproto)
 importFrom(methods,new)
 importFrom(methods,setRefClass)
